fix: Wrap words if too long for one line of comments

--- a/ClientApp/src/assets/topics.css
+++ b/ClientApp/src/assets/topics.css
@@ -8,6 +8,7 @@
 .card_scroll_container {
     display: flex;
     flex-direction: column;
+    max-width: 100%;
 }
 
 .most_liked_hint {
